Rewrote the kafkasql layer to use an RPC based approach (will require snapshotting)